# FinBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: b2cf4d77ab45_initial_tables.py
src/: main.py  mydatabase.db
src/application/containers/: container.py  modules.py
src/application/dto/: user.py
src/application/uow/: interfase.py  uow.py
src/application/use_cases/: category_use_cases.py  intarface.py  transaction_use_cases.py  user_use_cases.py
src/core/: config.py
src/core/database/: intarface.py
src/core/mappers/: category_mapper.py  transaction_mapper.py  user_mapper.py
src/domain/entities/: category.py  monthly_balance.py  transaction.py  user.py
src/domain/repositories/: category_repo.py  category_repo_interface.py  monthly_balance_interface.py  transaction_repo_interface.py  transaction_use_case.py  user_repo_intarface.py
src/domain/services/: category_service.py
src/domain/use_case/: base_use_case.py  intarface.py
src/domain/value_objects/: operetion_type_enum.py
src/presentation/api/: main.py
src/presentation/bot/: __init__.py  bot.py  main.py
src/utils/: config.py  logging.py
src/utils/database/: intarface.py
tests/bot/categories/: test_create_category.py
tests/bot/users/: test_registration.py
tests/repositories/memory/: test_category_repo.py  (+1 more)
tests/services/: test_categories_service.py  test_user_service.py
tests/use_cases/: test_category_use_cases.py  test_user_use_cases.py
(+67 files in other folders)
